package br.com.fiap.CalculadoraO2.enums;

public enum Classificacao {

    SUSTENTAVEL,
    NAOSUSTENTAVEL
}
