package br.com.fiap.CalculadoraO2.interfaces;

public interface Exibivel {

    void exibir();
}
