@startuml RankUp
skinparam classAttributeIconSize 0

package "models" {

    interface Exibivel {
      +exibir(): void
    }

    abstract class Usuario {
      -id: int
      -nome: String
      -email: String
      -idade: int
      -pontuacao: PontuacaoUsuario
      +exibirPerfil(): void
      +exibir(): void
      +{abstract} getTipo(): String
      +{abstract} exibirPermissoes(): void
    }

    class UsuarioComum {
      +exibirPermissoes(): void
    }

    class UsuarioAdmin {
      +exibirPermissoes(): void
      +visualizarTodosUsuarios(usuarios: List<Usuario>): void
    }

    class PontuacaoUsuario {
      -pontuacaoTotal: double
      -registros: List<RegistroAcao>
      +adicionarRegistro(r: RegistroAcao): void
      +carregarRegistros(registrosCarregados: List<RegistroAcao>): void
      +exibirPontuacao(): void
      +exibir(): void
      +contarTiposDistintos(): int
      +calcularNivel(): String
      +calcularCo2TotalEvitado(): double
    }

    class RegistroAcao {
      -id: int
      -acao: AcaoSustentavel
      -quantidade: double
      -data: String
      +calcularImpactoCO2(): double
      +calcularPontos(): double
      +exibirRegistro(): void
    }

    class CalculadoraCarbono {
      -{static} fatorEmissao: double
      +{static} calcularImpacto(acao: AcaoSustentavel, quantidade: double): double
      +{static} avaliarAcao(acao: AcaoSustentavel, quantidade: double): int
    }

    abstract class Acao {
      -nome: String
      -descricao: String
      -classificacao: Classificacao
      +exibirAcao(): void
      +getNome(): String
      +getDescricao(): String
      +getClassificacao(): Classificacao
    }

    class AcaoSustentavel {
      -fatorCO2: double
      -pontosPorAcao: double
      -unidade: String
      +exibirAcao(): void
      +exibir(): void
    }

    enum Classificacao {
      SUSTENTAVEL
      NAOSUSTENTAVEL
    }

    class Ranking {
      +gerarRanking(usuarios: List<Usuario>): List<Usuario>
      +posicaoDoUsuario(alvo: Usuario, usuarios: List<Usuario>): int
    }
}

package "dao" {

    class ConnectionFactory {
      +{static} obterconexao(): Connection
    }

    class UsuarioDAO {
      -conexao: Connection
      +cadastrarUser(usuario: Usuario): void
      +listarTodosUser(): List<Usuario>
      +updateUser(usuario: Usuario): void
      +deleteUser(id: int): void
      +proximoIdUser(): int
      +buscarPorIdUser(id: int): Usuario
      +buscarPorEmailUser(email: String): Usuario
    }

    class RegistroAcaoDAO {
      -conexao: Connection
      +proximoIdAcao(): int
      +cadastrarAcao(idUsuario: int, registro: RegistroAcao): void
      +listarPorUsuario(idUsuario: int, acoesDisponiveis: List<AcaoSustentavel>): List<RegistroAcao>
      +deletarRegistroUser(idUsuario: int): void
    }
}

' ===== Heranca e interfaces =====
Usuario ..|> Exibivel
AcaoSustentavel ..|> Exibivel
Usuario <|-- UsuarioComum
Usuario <|-- UsuarioAdmin
Acao <|-- AcaoSustentavel

' ===== Composicao / associacao dentro de models =====
Usuario *-- PontuacaoUsuario
PontuacaoUsuario *-- RegistroAcao
RegistroAcao --> AcaoSustentavel
CalculadoraCarbono ..> AcaoSustentavel : usa
Acao ..> Classificacao
Ranking ..> Usuario : usa

' ===== Camada DAO =====
UsuarioDAO ..> Usuario : usa
UsuarioDAO ..> ConnectionFactory : usa
RegistroAcaoDAO ..> RegistroAcao : usa
RegistroAcaoDAO ..> AcaoSustentavel : usa
RegistroAcaoDAO ..> ConnectionFactory : usa

@enduml
